--- a/css/index/footer.css
+++ b/css/index/footer.css
@@ -1,3 +1,21 @@
 .footer{
-    color: #252B42;
+    background-color: #252B42;
+    padding: 50px 20px;
+
+    .footer__grid{
+        display:grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 30px;
+        
+        .footer__col{
+            .footer__title{
+                font-size: 24px;
+                font-family: '';
+                font-weight: 700;
+                margin-bottom: 25px;
+                color: #ffff
+            }
+
+        }
+    }
 }
