Add css for partners

--- a/css/index.css
+++ b/css/index.css
@@ -2,4 +2,5 @@
 @import "./global/global.css";
 @import "./index/contactus.css";
 @import "./index/pricing.css";
-@import "./index/testimonials.css"
+@import "./index/testimonials.css";
+@import "./index/partners.css";
