Add css for prototyping section

--- a/css/index.css
+++ b/css/index.css
@@ -4,3 +4,4 @@
 @import "./index/pricing.css";
 @import "./index/testimonials.css";
 @import "./index/partners.css";
+@import "./index/prototyping.css";
