Add css for organize section

--- a/css/index.css
+++ b/css/index.css
@@ -5,3 +5,4 @@
 @import "./index/testimonials.css";
 @import "./index/partners.css";
 @import "./index/prototyping.css";
+@import "./index/organize.css";
