Add css for features

--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,4 @@
 @import "./index/partners.css";
 @import "./index/prototyping.css";
 @import "./index/organize.css";
+@import "./index/features.css";
