--- a/css/index/prototyping.css
+++ b/css/index/prototyping.css
@@ -1,11 +1,4 @@
 .prototyping {
-  width: 100%;
-  height: auto;
-  background-color: #ffffff;
-  font-family: "Graphic", sans-serif;
-  padding: 50px 0;
-  text-align: center;
-
   .prototyping__container {
     width: 100%;
     max-width: 1200px;
@@ -43,14 +36,14 @@
 
   .prototyping__title {
     font-size: 0;
-    color: transparent;
+    color: var(--transparent);
     margin-bottom: 30px;
 
     &::before {
       content: "Newsletter";
       font-size: 40px;
       font-weight: 400;
-      color: #252b42;
+      color: var(--dark-1);
       display: block;
       line-height: 1.2;
     }
@@ -59,21 +52,21 @@
   .prototyping__label {
     font-size: 16px;
     font-weight: 700;
-    color: #252b42;
+    color: var(--dark-1);
     margin-bottom: 10px;
   }
 
   .prototyping__subtitle {
     font-size: 20px;
     font-weight: 700;
-    color: #252b42;
+    color: var(--dark-1);
     margin-bottom: 10px;
   }
 
   .prototyping__description {
     font-size: 16px;
     font-weight: 400;
-    color: #374754;
+    color: var(--dark-2);
     margin-bottom: 30px;
   }
 
@@ -88,8 +81,8 @@
   .prototyping__input {
     width: 100%;
     max-width: 300px;
-    background-color: #f5f5f5;
-    border: 1px solid #e8e8e8;
+    background-color: var(--bg-1);
+    border: 1px solid var(--border-2);
     border-radius: 35px;
     padding: 15px 25px;
     font-family: inherit;
@@ -98,22 +91,8 @@
   }
 
   .prototyping__button {
-    background-color: #2091f9;
-    color: white;
-    border: none;
-    border-radius: 35px;
-    padding: 15px 35px;
-    font-size: 16px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 0.3s;
     width: 100%;
     max-width: 300px;
-  }
-
-  .prototyping__button:hover {
-    background-color: #1a7ac4;
-    transform: scale(1.05);
   }
 
   @media (min-width: 1000px) {
@@ -141,7 +120,7 @@
 
     .prototyping__title {
       font-size: 48px;
-      color: #252b42;
+      color: var(--dark-1);
       margin-bottom: 20px;
       &::before {
         display: none;
