--- a/css/index/contactus.css
+++ b/css/index/contactus.css
@@ -1,25 +1,16 @@
-.contact {
-  padding: 40px 0;
-  background-color: #ffffff;
-  width: 100%;
-  height: auto;
-}
-
 .contact .contact__container {
   width: 100%;
   padding: 0 20px;
   margin: 0 auto;
 }
-
 .contact .contact__title {
   text-align: center;
   font-size: 30px;
   font-family: "Graphic", sans-serif;
   font-weight: 700;
-  color: #252b42;
+  color: var(--dark-1);
   margin-bottom: 15px;
 }
-
 .contact .contact__subtitle {
   text-align: center;
   max-width: 400px;
@@ -27,10 +18,9 @@
   font-family: "Graphic", sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  color: #374754;
+  color: var(--dark-2);
   margin: 0 auto 35px auto;
 }
-
 .contact .contact__content {
   display: grid;
   grid-template-columns: 1fr;
@@ -38,11 +28,11 @@
 }
 
 .contact .contact__form-wrapper {
-  background: #ffffff;
-  border: 1px solid #dddddd;
+  background: var(--white);
+  border: 1px solid var(--border-3);
   border-radius: 20px;
   padding: 30px 20px;
-  box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 13px 19px var(--overlay-7);
   text-align: center;
   max-width: 350px;
   width: 100%;
@@ -58,8 +48,8 @@
 .contact .contact__input,
 .contact .contact__textarea {
   width: 100%;
-  background-color: #f5f5f5;
-  border: 1px solid #e8e8e8;
+  background-color: var(--bg-1);
+  border: 1px solid var(--border-2);
   border-radius: 35px;
   padding: 15px 20px;
   margin-bottom: 15px;
@@ -76,30 +66,26 @@
 }
 
 .contact .contact__button {
-  background-color: #2091f9;
-  color: white;
-  border: none;
-  border-radius: 35px;
-  padding: 15px 40px;
-  font-size: 16px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background-color 0.3s;
   min-width: 150px;
-  &:hover{
-    transform: scale(1.1);
-  }
+}
+
+.contact .contact__button:hover {
+  transform: scale(1.1);
 }
 
 .contact .contact__map {
   display: none;
 }
 
-.contact .contact__icon,
-.contact .socials__icon {
+.contact .contact__icon {
   width: 30px;
   height: 30px;
   object-fit: contain;
+  filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(190deg)
+    brightness(118%) contrast(119%);
+}
+
+.contact .socials__icon {
   filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(190deg)
     brightness(118%) contrast(119%);
 }
@@ -109,16 +95,6 @@
   justify-content: center;
   gap: 25px;
   margin-bottom: 20px;
-}
-
-.contact .socials__link .socials__icon {
-  transition: transform 0.2s;
-  width: 35px;
-  height: 35px;
-}
-
-.contact .socials__link:hover .socials__icon {
-  transform: scale(1.1);
 }
 
 .contact .contact__address-block {
@@ -145,7 +121,7 @@
 .contact .contact__address-text {
   font-size: 14px;
   line-height: 1.5;
-  color: #374754;
+  color: var(--dark-2);
   max-width: 250px;
 }
 
