--- a/css/index/header.css
+++ b/css/index/header.css
@@ -54,7 +54,7 @@
 }
 
 .navbar-toggler {
-  border-color: rgba(255, 255, 255, 1);
+  border-color: var(--white);
 }
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
@@ -67,7 +67,7 @@
 
 .hero__title {
   font-size: 48px;
-  color: #ffff;
+  color: var(--white);
   font-weight: 700;
   max-width: 800px;
   text-align: center;
@@ -75,13 +75,13 @@
 }
 
 .hero__subtitle {
-  color: transparent;
+  color: var(--transparent);
   font-size: 0;
 
   &:before {
     content: "Most calendars are designed for teams.";
     font-size: 28px;
-    color: #ffff;
+    color: var(--white);
     font-weight: 400;
     max-width: 500px;
     text-align: center;
@@ -96,23 +96,9 @@
 }
 
 .hero__button {
-  background-color: #2091f9;
-  color: white;
-  border: none;
-  border-radius: 35px;
-  padding: 15px 35px;
-  font-size: 16px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all 0.3s;
   width: 100%;
   max-width: 200px;
   margin: 50px auto;
-}
-
-.hero__button:hover {
-  background-color: #1a7ac4;
-  transform: scale(1.05);
 }
 
 @media (min-width: 1000px) {
@@ -126,17 +112,11 @@
     display: flex;
     flex-direction: row;
     align-items: flex-end;
-    gap: 15px;
+    gap: 25px;
     order: 2;
-
-    .socials__icon {
-      &:hover {
-        transform: scale(1.1);
-      }
-    }
   }
 
-  .navbar{
+  .navbar {
     order: 0;
     justify-content: center;
   }
@@ -149,7 +129,7 @@
 
   .hero__subtitle {
     font-size: 28px;
-    color: #ffff;
+    color: var(--white);
     font-weight: 400;
     max-width: 750px;
     text-align: center;
@@ -158,7 +138,7 @@
     &:before {
       display: none;
       font-size: 0px;
-      color: transparent;
+      color: var(--transparent);
     }
   }
 
